# stock_sim_uni

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODEOWNERS  Doxyfile  HighRiskStrategy.cpp  LowRiskStrategy.cpp  Performance.md  README.md  Stock.cpp  StockMarket.cpp  StockMarket.h  Wallet.cpp  client.cpp  highRiskStrategy.cpp  idea.md  lowRiskStrategy.cpp  performance.md
.github/workflows/: github-actions-compile.yml  github-actions-documentation.yml
doc/: CODEOWNERS
doc/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  HighRiskStrategy_8cpp.html  HighRiskStrategy_8cpp.js  HighRiskStrategy_8cpp__incl.map  HighRiskStrategy_8cpp__incl.md5  HighRiskStrategy_8cpp_source.html  HighRiskStrategy_8h.html  HighRiskStrategy_8h__dep__incl.map  HighRiskStrategy_8h__dep__incl.md5  HighRiskStrategy_8h__incl.map  HighRiskStrategy_8h__incl.md5  HighRiskStrategy_8h_source.html  LowRiskStrategy_8cpp.html  LowRiskStrategy_8cpp.js  LowRiskStrategy_8cpp__incl.map  LowRiskStrategy_8cpp__incl.md5  LowRiskStrategy_8cpp_source.html  LowRiskStrategy_8h.html  LowRiskStrategy_8h__dep__incl.map  LowRiskStrategy_8h__dep__incl.md5  LowRiskStrategy_8h__incl.map  LowRiskStrategy_8h__incl.md5  LowRiskStrategy_8h_source.html  README_8md.html  StockMarket_8cpp.html  StockMarket_8cpp__incl.map  StockMarket_8cpp__incl.md5  StockMarket_8cpp_source.html  StockMarket_8h.html  StockMarket_8h__dep__incl.map  StockMarket_8h__dep__incl.md5  StockMarket_8h__incl.map  StockMarket_8h__incl.md5  StockMarket_8h_source.html  Stock_8cpp.html  Stock_8cpp.js  Stock_8cpp__incl.map  Stock_8cpp__incl.md5  Stock_8cpp_source.html  (+113 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  (+30 more)
doc/latex/: CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  HighRiskStrategy_8cpp.tex  HighRiskStrategy_8cpp__incl.md5  HighRiskStrategy_8h.tex  HighRiskStrategy_8h__dep__incl.md5  HighRiskStrategy_8h__incl.md5  LowRiskStrategy_8cpp.tex  LowRiskStrategy_8cpp__incl.md5  LowRiskStrategy_8h.tex  LowRiskStrategy_8h__dep__incl.md5  LowRiskStrategy_8h__incl.md5  StockMarket_8cpp.tex  StockMarket_8cpp__incl.md5  StockMarket_8h.tex  StockMarket_8h__dep__incl.md5  StockMarket_8h__incl.md5  Stock_8cpp.tex  Stock_8cpp__incl.md5  Stock_8h.tex  Stock_8h__dep__incl.md5  Stock_8h__incl.md5  Strategy_8cpp.tex  Strategy_8cpp__incl.md5  Strategy_8h.tex  Strategy_8h__dep__incl.md5  Strategy_8h__incl.md5  Wallet_8cpp.tex  Wallet_8cpp__incl.md5  Wallet_8h.tex  Wallet_8h__dep__incl.md5  Wallet_8h__incl.md5  annotated.tex  classHighRiskStrategy.tex  classHighRiskStrategy__inherit__graph.md5  classLowRiskStrategy.tex  classLowRiskStrategy__inherit__graph.md5  classStock.tex  classStockMarket.tex  classStockMarket__coll__graph.md5  (+19 more)
docs/: HighRiskStrategy_8h.html  HighRiskStrategy_8h.js  HighRiskStrategy_8h__incl.dot  HighRiskStrategy_8h_source.html  LowRiskStrategy_8h.html  LowRiskStrategy_8h.js  LowRiskStrategy_8h__incl.dot  LowRiskStrategy_8h_source.html  StockMarket_8h.html  StockMarket_8h.js  StockMarket_8h__dep__incl.dot  StockMarket_8h__incl.dot  StockMarket_8h_source.html  Stock_8h.html  Stock_8h.js  Stock_8h__dep__incl.dot  Stock_8h__incl.dot  Stock_8h_source.html  Strategy_8h.html  Strategy_8h__dep__incl.dot  Strategy_8h__incl.dot  Strategy_8h_source.html  Wallet_8h.html  Wallet_8h.js  Wallet_8h__incl.dot  Wallet_8h_source.html  annotated.html  annotated_dup.js  classHighRiskStrategy-members.html  classHighRiskStrategy.html  classHighRiskStrategy.js  classHighRiskStrategy__coll__graph.dot  classHighRiskStrategy__inherit__graph.dot  classLowRiskStrategy-members.html  classLowRiskStrategy.html  classLowRiskStrategy__coll__graph.dot  classLowRiskStrategy__inherit__graph.dot  classStock-members.html  classStock.html  classStockMarket-members.html  (+39 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  (+25 more)
include/: HighRiskStrategy.h  LowRiskStrategy.h  Stock.h  StockMarket.h  Strategy.h  Wallet.h
input/: stocks.json
src/: HighRiskStrategy.cpp  LowRiskStrategy.cpp  Stock.cpp  StockMarket.cpp  Strategy.cpp  Wallet.cpp  client.cpp  plot_price_history.py
tests/: CMakeLists.txt  performanceTest.cpp  profiling.cpp  test_Stock.cpp  unit_tests.cpp
